BACKLOG-21775: Use jdk17 (#1796)